--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "lenis": "^1.1.9",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
