--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "firebase": "^10.13.1",
     "lenis": "^1.1.9",
     "next": "^14.2.5",
     "react": "^18.3.1",
