--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lenis": "^1.1.9",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
