--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@phosphor-icons/react": "^2.1.7",
+    "clsx": "^2.1.1",
     "firebase": "^10.13.1",
     "lenis": "^1.1.9",
     "next": "^14.2.5",
