--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.53.0",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.14",
